--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Emanuel Toma | TypeScript | Webpack | Tailwind</title>
+    <title>Emanuel Toma | Resume | React | Tailwind</title>
   </head>
   <body>
     <div id="root"></div>
